--- a/proxy/docker-compose.yml
+++ b/proxy/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   proxy-apache2:
     image: ubuntu/apache2:2.4-21.10_edge
@@ -7,16 +5,18 @@ services:
     volumes:
       - ./proxyweb:/var/www/html
     ports:
-      - "80:80"
+      - 80:80
     networks:
       deflaut:
-        ipv4_address: 172.23.0.2
+        #ipv4_address: 172.23.0.2
 
 networks:
   deflaut:
     name: proxy-net
     driver: bridge
-    ipam:
-      config:
-        - subnet: 172.23.0.0/16
-          gateway: 172.23.0.1
+    external: flase
+    #ipam:
+      #config:
+        #- subnet: 172.23.0.0/16
+          #gateway: 172.23.0.1
+          
