--- a/websites/docker-compose.yml
+++ b/websites/docker-compose.yml
@@ -3,34 +3,61 @@ services:
     image:  ubuntu/apache2:2.4-21.10_edge
     container_name: site1
     ports:
-      - "8081:80"
+      - 8081:80
+    volumes:
+      - ./site1:/var/www/html
+    networks:
+      default: 
+        ipv4_address: 172.22.0.18
+  
+  site-2:
+    image:  ubuntu/apache2:2.4-21.10_edge
+    container_name: site2_contenair
+    volumes:
+      - ./site2:/var/www/html
+    ports:
+      - 8082:80
+    networks:
+      - default
 
   python-server:
     build: .
     image: ismatou/webserver:0.0.1
     container_name: python-server
     ports:
-      - "8084:8081"
+      - 8084:8081
     networks:
       - webnet
+  
+  site-3:
+    image: nginx:1.26.0-alpine3.19
+    container_name: site3_container
+    ports:
+      - 8085:80
+    volumes:
+      - ./site3:/usr/share/nginx/html
+    networks:
+      default:
+        ipv4_address: 172.22.0.20
 
-  site4:
+  site-4:
     build: .
     image: ismatou/webserver:0.0.1
     container_name: site4_container
     ports:
-      - "8085:8081"
+      - "8086:8081"
     volumes:
       - ./site4:/webapp
     networks:
-      - webnet
+       default:
+        ipv4_address: 172.22.0.21
 
   portainer:
     image: portainer/portainer-ce:latest
     container_name: portainer
     restart: always
     ports:
-      - "9000:9000"
+      - 9000:9000
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - portainer_data:/data
@@ -40,8 +67,10 @@ volumes:
     driver: local
 
 networks:
+  default:
   webnet:
     driver: bridge
+    external: false
     ipam:
       config:
         - subnet: 172.30.0.0/16
